@@ -1,0 +1,19 @@
+<form class="newsSearchForm"  action="form.php" method="post" autocomplete="off" > 
+	
+	<div class="inputDiv">
+		<input id="search" type="text" name="search" placeholder="Search Term" value="" /><br /> 
+	</div>
+	
+	<div class="input-daterange input-group" id="datepicker">
+		<input type="text" id="dateFrom" class="input-sm form-control" name="start" placeholder="Date From" />
+		<span class="input-group-addon">to</span>
+		<input type="text" id="dateTo" class="input-sm form-control" name="end" placeholder="Date To" />
+	</div>
+	
+	<div class="submitBtn">
+		<input type="submit" value="Search" /> 
+	</div>
+	<!-- <p id="startDateOutput"></p>
+	<p id="endDateOutput">2</p>-->
+	
+</form>
